--- a/common/components/GamePage.scss
+++ b/common/components/GamePage.scss
@@ -45,7 +45,7 @@
 			*[data-val=''] {
 				&:hover {
 					&::after {
-						content: "\f111";
+						content: "o";
 						opacity: 0.5;
 					}
 				}
@@ -54,7 +54,7 @@
 				*[data-val=''] {
 					&:hover {
 						&::after {
-							content: "\f00d";
+							content: "x";
 							font-weight: 900;
 						}
 					}
@@ -94,16 +94,16 @@
 					align-items: center;
 				}
 				&::after {
-					font-family: 'Font Awesome 6 Free';
+					font-family: fantasy, sans-serif;
 				}
 				&[data-val='O'] {
 					&::after {
-						content: "\f111";
+						content: "o";
 					}
 				}
 				&[data-val='X'] {
 					&::after {
-						content: "\f00d";
+						content: "x";
 						font-weight: 900;
 					}
 				}
